k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorang-backend-svc-prod
spec:
  selector:
    app: memorang-backend-prod
  ports:
  - name: mem-api-svc-port
    protocol: TCP
    port: 80
    targetPort: mem-api-port
